:memo: 更新运行问题集锦